FoodBank/objects/Phone__c.object
<CustomObject>
    <description>A family telephone number</description>
    <fields>
        <fullName>BestTime__c</fullName>
        <label>Best Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Phones</relationshipLabel>
        <relationshipName>Phones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Self__c</fullName>
        <formula>HYPERLINK( Id, Type__c &amp; &quot;: &quot; &amp; Number__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Phone</label>
    <listViews>
        <fullName>All_Grid</fullName>
        <columns>Family__c</columns>
        <columns>Self__c</columns>
        <columns>Type__c</columns>
        <columns>BestTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (Grid)</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>